fix card styles overflow

--- a/src/components/Card/Card.less
+++ b/src/components/Card/Card.less
@@ -5,6 +5,7 @@
 }
 
 .card {
+  box-sizing: border-box;
   width: 200px;
   height: 200px;
   border: 1px gray solid;
@@ -17,6 +18,8 @@
 
   &__name {
     text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 200px;
   }
 
 
